merge DefaultTreeUI from idea